Add logic for placing ships on board
Change-Id: I89f213d3a8a37fb248879d80044fe81f913d611f

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -5,8 +5,8 @@
     %th
     - ('A'..'J').each do |coord|
       %th= coord
-  - @game.board.each_with_index do |row, index|
+  - @game.board.each_with_index do |row, row_index|
     %tr
-      %td= index+1
-      - row.each_with_index do |cell, index|
-        %td= link_to (cell[:contents] || "empty"), edit_game_path
+      %td= row_index+1
+      - row.each_with_index do |cell, col_index|
+        %td= cell[:contents].try(:id) || "empty"
