--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,12 +1,12 @@
-%h3= "Shots Remaining: #{@game.shots_remaining}"
-
-%table.game_board
-  %tr
-    %th
-    - ('A'..'J').each do |coord|
-      %th= coord
-  - @game.board.each_with_index do |row, row_index|
-    %tr
-      %td= row_index + 1
-      - row.each_with_index do |cell, col_index|
-        %td=   link_to cell_contents(cell), fire_game_path(@game, x: row_index, y: col_index), method: :patch, class: cell[:status]
+.row{ :'ng-app' => "battleship" }
+  .col-md-6.col-md-offset-1
+    .row.game_board
+      .col-xs-1
+      - ('A'..'J').each do |coord|
+        .col-xs-1.cell.label= coord
+    - @game.board.each_with_index do |row, row_index|
+      .row
+        .col-xs-1.cell.label
+          %h6= row_index + 1
+        -row.each_with_index do |cell, cell_index|
+          %a.col-xs-1.cell{ :'ng-controller' => "CellController", :'ng-init' => "init(#{row_index}, #{cell_index}, '#{cell[:status]}', '#{fire_game_path}')", :'ng-class' => "status", :'ng-click' => "(status == 'blank') && fire()" }
