--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,11 +6,7 @@
   = csrf_meta_tags
 %body
   .container
+    .row
+      = render('shared/header')
 
-    = render('shared/header')
-
-    .col-md-8.col-md-offset-2
-
-      = yield
-
-      = render('shared/error_messages', flash: flash)
+    = yield
